--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <!--Education-->
 
         <div class="my-education-section">
-          <h3 class="main-content-title">Educstion</h3>
+          <h3 class="main-content-title">Education</h3>
           <h3 class="my-education-univercity">
             Ivan Franko National University of Lviv
           </h3>
